<resources>
    <string name="app_name">Vasantshrushti Farm</string>

    <string name="room_1_id">q1vcg41c48hrpek2tji6a24jc4@group.calendar.google.com</string>
    <string name="room_2_id">nv20hanedldr9v1l9gko7eihjs@group.calendar.google.com</string>
    <string name="room_3_id">n9v78nc00adk6lchan9qbs7lds@group.calendar.google.com</string>
    <string name="room_4_id">7nr0afi1cenm9tj7be11n55jgo@group.calendar.google.com</string>
    <string name="bungalow_3_1_id">u5vt7p7fspjc5qel815nbr3mvo@group.calendar.google.com</string>
    <string name="special_room_1_id">s1d2cqeftf9riharcg5uu04mi8@group.calendar.google.com</string>
    <string name="special_room_2_id">nhmrthio3h2fdrv9rba54aiqcg@group.calendar.google.com</string>
    <string name="nivant_id">82qt7lqduchvdaim7biniiu2hg@group.calendar.google.com</string>
    <string name="dormitory_1">rsjn35bm24ud5na1r8ii69cfr4@group.calendar.google.com</string>
    <string name="dormitory_2">3pgn4jqb8fc04oh8foc2gmjego@group.calendar.google.com</string>
    <string name="big_lawn">oj4ivkkg4hu1vgk4d1b81b7s3g@group.calendar.google.com</string>
    <string name="aaram_lawn">1ndu25dgvmug8urvhhpek0795s@group.calendar.google.com</string>
    <string name="four_room_lawn">ii18qos5pa9hdh5hm619t68pec@group.calendar.google.com</string>
    <string name="nivant_ashtakon_lawn">3ek503eid6a2npeekoleqc763c@group.calendar.google.com</string>
    <string name="new_ashtakon_lawn">spknm9j03ucol6qfv5fpcdrn84@group.calendar.google.com</string>
    <string name="one_day">ulubradne2vmfb409ffhdchojk@group.calendar.google.com</string>
    <string name="premium_room_saanj">8c445e0197143aaae851f41a5a0db70d092ab69d38d38d9d5ea6066e6a0b94ab@group.calendar.google.com</string>
    <string name="premium_room_sugandh">3816da047e1de355b090846bd11f9b37854b9fa3db6568b03bb49fdc5771577f@group.calendar.google.com</string>
    <string name="premium_room_sukhad">95357174f3fb4d47a3e200e3e33b24c38ec0f883ede66e8d584314105c5287b8@group.calendar.google.com</string>
    <string name="premium_room_suman">14866497c28484ba4c96628980c68b73d22970a4065b4eda01600f5b2d177d3a@group.calendar.google.com</string>
    <string name="premium_room_surekh">ac16a63d665a1f09544a7dbed4cf1d137db4f4995bdac6df9abc20bb3b87c572@group.calendar.google.com</string>
    <string name="lawn_premium_room">1be2768b2e015919c2c89004f9b6f4f0aa4712e3d544b4a295b6706928c12998@group.calendar.google.com</string>
    <string name="swami_samarth_hall">73a9f5b70df3c601adedfe2de76529b0ca29b6ee6445d286eec5e2170f67eb68@group.calendar.google.com</string>

    <string name="_9_00_am">9:00 AM</string>
    <string name="_5_00_pm">5:00 PM</string>
    <string name="check_availability">Check availability</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5_30_pm">5:30 PM</string>
    <string name="_9_30_am">9:30 AM</string>
    <string name="check_in_time">Check in time:</string>
    <string name="select_check_out_date_and_time">Select check out date and time</string>
    <string name="proceed">Proceed</string>
    <string name="no_booking_for_selected_date_create_one_by_clicking_the_button_below">No bookings for selected date. Create one by clicking the button below</string>
    <string name="booking_for">Booking for</string>
    <string name="no_of_people">No. of people</string>
    <string name="advance_payment">Advance Payment</string>
    <string name="no_advance_payment">No Advance Payment</string>
    <string name="amount">Amount</string>
    <string name="book">Book</string>
    <string name="select_all">Whole resort</string>
    <string name="bungalow_and_rooms">Bungalow &amp; Rooms</string>
    <string name="bungalow_5_1">Bungalow (5 + 1)</string>
    <string name="bookings_on">Loading Bookings on</string>
    <string name="phone_number">Phone number</string>
    <string name="delete">Delete</string>
    <string name="booking_created">Booking Created</string>
    <string name="booking_created_channel_id">35ae74c9-cd06-40d5-9c87-5d984ef8fa5a</string>
    <string name="booking_updated_channel_id">1333ed11-3830-4ed2-a0da-c95ed3d4226b</string>
    <string name="edit">Edit</string>
    <string name="deselect_all">Deselect all</string>
    <string name="notes">Notes</string>
    <string name="booking_updated">Booking Updated</string>
    <string name="one_day_booking_select_one_of_the_timings">One day booking\nSelect one of the timings</string>
    <string name="_9_30_am_to_5_00_pm">9:30 AM to 5:00 PM</string>
    <string name="_4_00_pm_to_12_00_am">4:00 PM to 12:00 AM</string>
    <string name="booking_tomorrow">Tomorrow Booking</string>
    <string name="booking_tomorrow_channel_id">dd70ff9c-f752-4aef-9362-745ba10baf12</string>
    <string name="share">Share</string>
    <string name="logo">Logo</string>
    <string name="receipt_title_text">Vasantshrushti Farm\nAt Mali Stop, Tarapur Boisar Road\nBoisar West - 401502\nContact: 9892125375/8169076958</string>
    <string name="receipt_footer">Thanks for choosing our farm for your enjoyment.\nRajesh V. Mhatre\nVasantshrushti Farm \n\nAdvance payment made will not be refundable if booking is cancelled by you or as per government policy</string>

</resources>