<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/check_in_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/check_in_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/check_in_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_time"
            android:textColor="@color/title_color" />

        <RadioButton
            android:id="@+id/_9_30am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_9_30_am" />

        <RadioButton
            android:id="@+id/_5_30pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_30_pm" />

    </RadioGroup>

    <TextView
        android:id="@+id/checkoutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_check_out_date_and_time"
        android:textColor="@color/title_color"
        app:layout_constraintTop_toBottomOf="@+id/check_in_time" />

    <DatePicker
        android:id="@+id/check_out_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/check_out_time"
        app:layout_constraintTop_toBottomOf="@+id/checkoutText" />

    <RadioGroup
        android:id="@+id/check_out_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/check_availability">

        <RadioButton
            android:id="@+id/_9am"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9_00_am" />

        <RadioButton
            android:id="@+id/_5pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/_5_00_pm" />

    </RadioGroup>

    <Button
        android:id="@+id/check_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_availability"
        app:layout_constraintBottom_toTopOf="@+id/guideline40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintTop_toBottomOf="@+id/guideline40">

        <ProgressBar
            android:id="@+id/loading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/accommodation_list1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline50"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/accommodation_list2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/bungalow5_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bungalow_5_1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline50"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/select_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>