<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="16dp"
    app:cardElevation="4dp"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/receipt_logo"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/receipt_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receipt_title_text"
                android:textColor="@color/title_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receipt_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/title_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/check_in_timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/check_out_timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/accommodations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/advance_payment_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/booked_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/receipt_footer"
            android:textSize="15sp"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/share"
                android:visibility="gone"
                app:icon="@drawable/share" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/edit"
                app:icon="@drawable/edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:icon="@drawable/delete" />
        </LinearLayout>

        <TextView
            android:id="@+id/tracking_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/booking_created"
            android:visibility="gone" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
